# python-web-automation

./: .env.example  .gitignore  README.md  checklist.py  credential.py  digitalform.py  pyproject.toml  requirements.txt
example/: certified.py  edge.py  facebook.py  register.py
website/: checklist.txt
